--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
       </ul>
       <h3>Media Mentions</h3>
       <ul>
-        <li><a href="https://twitter.com/CNNConnect/status/1387051148494970880">CNN International</a></li>
-        <li><a href="https://www.thequint.com/news/world/fear-uncertainty-wait-stories-of-indian-students-trying-to-get-out-of-ukraine#read-more">The Quint</a></li>
-        <li><a href="https://timesofindia.indiatimes.com/city/hyderabad/ukraine-crisis-long-walk-for-indian-students-to-borders-in-freezing-cold/articleshow/89958512.cms">TOI</a></li>
-        <li><a href="https://www.dailypioneer.com/2021/sunday-edition/life-saviours.html">Daily Pioneer</a></li>
-        <li><a href="https://www.rediff.com/news/interview/team-sos-india-founder-nitesh-singh-in-5-days-all-students-will-be-out-of-ukraine/20220303.htm">Rediff</a></li>
-        <li><a href="https://www.hindustantimes.com/cities/pune-news/city-lad-helps-indian-students-evacuate-from-ukraine-101648809733145.html">hindustan Times</a></li>
-      <li><a href="https://timesofindia.indiatimes.com/city/hyderabad/sumys-indians-in-catch-22-hope-for-safe-exit/articleshow/89979775.cms">TOI</a></li>
+        <li><a href="https://twitter.com/CNNConnect/status/1387051148494970880" target="_blank">CNN International</a></li>
+        <li><a href="https://www.thequint.com/news/world/fear-uncertainty-wait-stories-of-indian-students-trying-to-get-out-of-ukraine#read-more" target="_blank">The Quint</a></li>
+        <li><a href="https://timesofindia.indiatimes.com/city/hyderabad/ukraine-crisis-long-walk-for-indian-students-to-borders-in-freezing-cold/articleshow/89958512.cms" target="_blank">TOI</a></li>
+        <li><a href="https://www.dailypioneer.com/2021/sunday-edition/life-saviours.html" target="_blank">Daily Pioneer</a></li>
+        <li><a href="https://www.rediff.com/news/interview/team-sos-india-founder-nitesh-singh-in-5-days-all-students-will-be-out-of-ukraine/20220303.htm" target="_blank">Rediff</a></li>
+        <li><a href="https://www.hindustantimes.com/cities/pune-news/city-lad-helps-indian-students-evacuate-from-ukraine-101648809733145.html" target="_blank">hindustan Times</a></li>
+      <li><a href="https://timesofindia.indiatimes.com/city/hyderabad/sumys-indians-in-catch-22-hope-for-safe-exit/articleshow/89979775.cms" target="_blank">TOI</a></li>
       </ul>
       
     </div>
