--- a/index.html
+++ b/index.html
@@ -1,49 +1,64 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>The Nitesh Singh Official Website</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link
-      rel="stylesheet"
-      type="text/css"
-      media="screen"
-      href="./css/main.css"
-    />
-    <script src="./js/main.js"></script>
-    
-  </head>
-  <body>
-    <div>
-      <img src="./img/mypic.png" alt="mypic" class="mypic" />
-      <h2>All the alphabets of my life</h2>
-      <h3>About Me</h3>
-      <p>
-        Hi, I am Nitesh Singh. Founding member of
-        <a href="https://www.teamsosindia.in">Team SOS India</a>,<a href="https://www.feedppl.org">FeedPPL Foundation</a>, <a href="https://www.projectsveta.com">Project
-            Sveta</a>,curator of <a href="https://www.ravs.io">Ravs.io</a>.
 
-        I am a self taught programmer, may look for job soon.
-      </p>
-      <h3>Tech Projects</h3>
-      <ul>
-        <li>Team SOS India</li>
-        <li>Team SOS Blood</li>
-        <li>Ravs</li>
-        <li>Project Sveta</li>
-      </ul>
-      <h3>Media Mentions</h3>
-      <ul>
-        <li><a href="https://twitter.com/CNNConnect/status/1387051148494970880" target="_blank">CNN International</a></li>
-        <li><a href="https://www.thequint.com/news/world/fear-uncertainty-wait-stories-of-indian-students-trying-to-get-out-of-ukraine#read-more" target="_blank">The Quint</a></li>
-        <li><a href="https://timesofindia.indiatimes.com/city/hyderabad/ukraine-crisis-long-walk-for-indian-students-to-borders-in-freezing-cold/articleshow/89958512.cms" target="_blank">TOI</a></li>
-        <li><a href="https://www.dailypioneer.com/2021/sunday-edition/life-saviours.html" target="_blank">Daily Pioneer</a></li>
-        <li><a href="https://www.rediff.com/news/interview/team-sos-india-founder-nitesh-singh-in-5-days-all-students-will-be-out-of-ukraine/20220303.htm" target="_blank">Rediff</a></li>
-        <li><a href="https://www.hindustantimes.com/cities/pune-news/city-lad-helps-indian-students-evacuate-from-ukraine-101648809733145.html" target="_blank">hindustan Times</a></li>
-      <li><a href="https://timesofindia.indiatimes.com/city/hyderabad/sumys-indians-in-catch-22-hope-for-safe-exit/articleshow/89979775.cms" target="_blank">TOI</a></li>
-      </ul>
-      
-    </div>
-  </body>
+<head>
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <title>The Nitesh Singh Official Website</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="stylesheet" type="text/css" media="screen" href="./css/main.css" />
+  <script src="./js/main.js"></script>
+</head>
+
+<body>
+  <div>
+    <img src="./img/mypic.png" alt="mypic" class="mypic" />
+    <h2>All the alphabets of my life</h2>
+    <h3>About Me</h3>
+    <p>
+      Hi, I am Nitesh Singh. Founding member of
+      <a href="https://www.teamsosindia.in">Team SOS India</a>,<a href="https://www.feedppl.org">FeedPPL Foundation</a>,
+      <a href="https://www.projectsveta.com">Project Sveta</a>,curator of
+      <a href="https://www.ravs.io">Ravs.io</a>. I am a self taught
+      programmer, may look for job soon.
+    </p>
+    <h3>Tech Projects</h3>
+    <ul>
+      <li>Team SOS India</li>
+      <li>Team SOS Blood</li>
+      <li>Ravs</li>
+      <li>Project Sveta</li>
+    </ul>
+    <h3>Media Mentions</h3>
+    <ul>
+      <li>
+        <a href="https://twitter.com/CNNConnect/status/1387051148494970880" target="_blank">CNN International</a>
+      </li>
+      <li>
+        <a href="https://www.thequint.com/news/world/fear-uncertainty-wait-stories-of-indian-students-trying-to-get-out-of-ukraine#read-more"
+          target="_blank">The Quint</a>
+      </li>
+      <li>
+        <a href="https://timesofindia.indiatimes.com/city/hyderabad/ukraine-crisis-long-walk-for-indian-students-to-borders-in-freezing-cold/articleshow/89958512.cms"
+          target="_blank">TOI</a>
+      </li>
+      <li>
+        <a href="https://www.dailypioneer.com/2021/sunday-edition/life-saviours.html" target="_blank">Daily Pioneer</a>
+      </li>
+      <li>
+        <a href="https://www.rediff.com/news/interview/team-sos-india-founder-nitesh-singh-in-5-days-all-students-will-be-out-of-ukraine/20220303.htm"
+          target="_blank">Rediff</a>
+      </li>
+      <li>
+        <a href="https://www.hindustantimes.com/cities/pune-news/city-lad-helps-indian-students-evacuate-from-ukraine-101648809733145.html"
+          target="_blank">hindustan Times</a>
+      </li>
+      <li>
+        <a href="https://timesofindia.indiatimes.com/city/hyderabad/sumys-indians-in-catch-22-hope-for-safe-exit/articleshow/89979775.cms"
+          target="_blank">TOI</a>
+      </li>
+    </ul>
+  </div>
+</body>
+
 </html>
