added target to index

--- a/index.html
+++ b/index.html
@@ -22,12 +22,10 @@
         <h3>About Me</h3>
         <p>
           Hi, I am Nitesh Singh. Founding member of
-          <a href="https://www.teamsosindia.in">Team SOS India</a>,<a
-            href="https://www.feedppl.org"
-            >FeedPPL Foundation</a
-          >, <a href="https://www.projectsveta.com">Project Sveta</a>,curator of
-          <a href="https://www.ravs.io">Ravs.io</a>. I am a self taught
-          programmer, may look for job soon.
+          <a href="https://www.teamsosindia.in" target="_blank">Team SOS India</a>, <a
+            href="https://www.feedppl.org" target="_blank"
+            >FeedPPL Foundation</a>, <a href="https://www.projectsveta.com" target="_blank">Project Sveta</a>, Curator of
+          <a href="https://www.ravs.io" target="_blank">Ravs.io</a>. 
         </p>
         <h3>Tech Projects Currently working on</h3>
         <ul>
