--- a/index.html
+++ b/index.html
@@ -21,17 +21,14 @@
         <h3>About Me</h3>
         <p>
           Hi, I am Nitesh Singh. Founding member of
-          <a href="https://www.teamsosindia.in" target="_blank">Team SOS India</a>, <a
-            href="https://www.feedppl.org" target="_blank"
-            >FeedPPL Foundation</a>, <a href="https://www.projectsveta.com" target="_blank">Project Sveta</a>, Curator of
+          <a href="https://www.teamsosindia.in" target="_blank">Team SOS India</a>,<a href="https://www.projectsveta.com" target="_blank">Project Sveta</a>, Curator of
           <a href="https://www.ravs.io" target="_blank">Ravs.io</a>. 
         </p>
         <h3>Tech Projects Currently working on</h3>
         <ul>
           <li>Team SOS India</li>
-          <li>Team SOS Blood</li>
-          <li>Ravs</li>
           <li>Project Sveta</li>
+          <li>Ravs</li>
         </ul>
         
         <h3>Media Mentions</h3>
