--- a/index.html
+++ b/index.html
@@ -30,6 +30,16 @@
           <li>Project Sveta</li>
           <li>Ravs</li>
         </ul>
+      
+       <h3>Documenting my knowledge</h3>
+        <ul>
+          <li><a href="https://www.teamsosindia.in" target="_blank">Political Me</a></li>
+           <li><a href="https://www.teamsosindia.in" target="_blank">Second Journey - My Vlog</a></li>
+          <li><a href="https://www.youtube.com/@OptionsTradingByTNS" target="_blank">Options Trading By TNS</a></li>
+          <li><a href="https://www.youtube.com/@ravsdotio" target="_blank">Crypto Trading and Blockchain By Ravs.io</a></li>
+          <li><a href="https://www.youtube.com/@factsbytns" target="_blank">Facts By TNS</a></li>
+          <li><a href="https://www.youtube.com/@thatshourya" target="_blank">Food And Travel on ThatShourya</a></li>
+        </ul>
         
         <h3>Media Mentions</h3>
         <ul>
