--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <body>
     <div class="main">
     <div>
-        <h2>All the alphabets of my life</h2>
+        <h2>All the alphabets of TNS</h2>
         <h3>About Me</h3>
         <p>
           Hi, I am Nitesh Singh. Founding member of
