--- a/connect.html
+++ b/connect.html
@@ -48,21 +48,14 @@
 					<section class="feature left">
 						<a href="#" class="image icon solid fa-mobile-alt"><img src="images/pic03.jpg" alt="" /></a>
 						<div class="content">
-							<h3>The Third Thing</h3>
+							<h3>Storytelling</h3>
 							<p>Recently, I've developed a keen interest in content generation especially Audio and Visual content and the art of storytelling.</p>
 						</div>
 					</section>
 				</div>
 
 				
-				<footer class="major container medium">
-					<h3>Get shady with science</h3>
-					<p>Vitae natoque dictum etiam semper magnis enim feugiat amet curabitur tempor orci penatibus. Tellus erat mauris ipsum fermentum etiam vivamus.</p>
-					<ul class="actions special">
-						<li><a href="#" class="button">Join our crew</a></li>
-					</ul>
-				</footer>
-
+				
 			</div>
 
 		<!-- Footer -->
