--- a/index.html
+++ b/index.html
@@ -33,9 +33,7 @@
       
        <h3>Documenting my knowledge</h3>
         <ul>
-          <li><a href="https://www.teamsosindia.in" target="_blank">Political Me</a></li>
-           <li><a href="https://www.teamsosindia.in" target="_blank">Second Journey - My Vlog</a></li>
-           <li><a href="https://www.youtube.com/@thatshourya" target="_blank">Food And Travel on ThatShourya</a></li>
+          <li><a href="https://www.youtube.com/@theniteshsinghvlogs" target="_blank">Second Journey - My Vlog</a></li>
         </ul>
         
         <h3>Media Mentions</h3>
