--- a/index.html
+++ b/index.html
@@ -1,83 +1,19 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>The Nitesh Singh Official Website</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link
-      rel="stylesheet"
-      type="text/css"
-      media="screen"
-      href="./css/main.css"
-    />
-    <script src="./js/main.js"></script>
-  </head>
-
-  <body>
-    <div class="main">
-    <div>
-        <h2>All the alphabets of TNS</h2>
-        <h3>About Me</h3>
-        <p>
-          Hi, I am Nitesh Singh. Founding member of
-          <a href="https://www.teamsosindia.in" target="_blank">Team SOS India</a>,<a href="https://www.projectsveta.com" target="_blank">Project Sveta</a>, Curator of
-          <a href="https://www.ravs.io" target="_blank">Ravs.io</a>. 
-        </p>
-        <h3>Tech Projects Currently working on</h3>
-        <ul>
-          <li>Team SOS India</li>
-          <li>Project Sveta</li>
-          <li>Ravs</li>
-        </ul>
-                    
-        <h3>Media Mentions</h3>
-        <ul>
-          
-          <li>
-            <a
-              href="https://www.thequint.com/news/world/fear-uncertainty-wait-stories-of-indian-students-trying-to-get-out-of-ukraine#read-more"
-              target="_blank"
-              >The Quint</a
-            >
-          </li>
-          <li>
-            <a
-              href="https://timesofindia.indiatimes.com/city/hyderabad/ukraine-crisis-long-walk-for-indian-students-to-borders-in-freezing-cold/articleshow/89958512.cms"
-              target="_blank"
-              >TOI</a
-            >
-          </li>
-          <li>
-            <a
-              href="https://www.dailypioneer.com/2021/sunday-edition/life-saviours.html"
-              target="_blank"
-              >Daily Pioneer</a
-            >
-          </li>
-          <li>
-            <a
-              href="https://www.rediff.com/news/interview/team-sos-india-founder-nitesh-singh-in-5-days-all-students-will-be-out-of-ukraine/20220303.htm"
-              target="_blank"
-              >Rediff</a
-            >
-          </li>
-          <li>
-            <a
-              href="https://www.hindustantimes.com/cities/pune-news/city-lad-helps-indian-students-evacuate-from-ukraine-101648809733145.html"
-              target="_blank"
-              >hindustan Times</a
-            >
-          </li>
-          <li>
-            <a
-              href="https://timesofindia.indiatimes.com/city/hyderabad/sumys-indians-in-catch-22-hope-for-safe-exit/articleshow/89979775.cms"
-              target="_blank"
-              >TOI</a
-            >
-          </li>
-        </ul>
-      </div>
+<head>
+    <title>Nitesh Singh's Social Links</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+</head>
+<body>
+    <div class="container">
+        <h1>Nitesh Singh</h1>
+        <p>Embark on the Adventure: Navigating the AI Universe with the #3665DaysChallenge | Merging Tech, Fitness, Finance, and the Pursuit of Happiness!</p>
+        <div class="links">
+            <a href="https://twitter.com/TheNiteshSingh" target="_blank">Twitter</a>
+            <a href="https://instagram.com/theniteshsinghpage" target="_blank">Instagram</a>
+            <a href="https://linkedin.com/in/theniteshsingh" target="_blank">LinkedIn</a>
+            <a href="https://www.youtube.com/channel/UCxuyszQmzftiiMHT7hjaC1A" target="_blank">YouTube</a>
+        </div>
     </div>
-  </body>
+</body>
 </html>
