Remove references to FeedPPL, Project Sveta, and Ravs.io

--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
       <h3>About Me</h3>
       <p>
         Hi, I am Nitesh Singh. Founding member of
-        <a href="https://www.teamsosindia.in">Team SOS India</a>,<a href="https://www.feedppl.org">FeedPPL Foundation</a>, <a href="https://www.projectsveta.com">Project
-            Sveta</a>,curator of <a href="https://www.ravs.io">Ravs.io</a>.
+        <a href="https://www.teamsosindia.in">Team SOS India</a>.
 
         I am a self taught programmer, may look for job soon.
       </p>
@@ -30,8 +29,7 @@
       <ul>
         <li>Team SOS India</li>
         <li>Team SOS Blood</li>
-        <li>Ravs</li>
-        <li>Project Sveta</li>
+        
       </ul>
       <h3>Media Mentions</h3>
       <ul>
