--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     
   </head>
   <body>
-    <div>
+    <div class="container">
       <img src="./img/mypic.png" alt="mypic" class="mypic" />
       <h2>All the alphabets of my life</h2>
       <h3>About Me</h3>
