--- a/index.html
+++ b/index.html
@@ -19,11 +19,7 @@
       <img src="./img/mypic.png" alt="mypic" class="mypic" />
       <h2>All the alphabets of my life</h2>
       <h3>About Me</h3>
-      <p>Hi, my name is Nitesh Singh, curator of xdaysofWeb3. My first introduction to cryptocurrency occurred on August 16, 2010, with Bitcoin's first hack event.</p>
-      <p>Since then, I have been maintaining xdaysofWeb3 as a personal diary to keep track of it for my friends and family (AdSense used to hate cryptocurrency). Though I registered the domain in 2025, I was surprised that someone left this awesome domain.</p>
-      <p>I also set up a Bitcoin full node (still running) on August 15, 2010, to investigate the Value Overflow incident, which (according to folks I’ve met since) may have been India’s first.</p>
-      <p>For me, Bitcoin was never a “eureka” moment. It was an invitation—to learn tech, explore maths, understand finance and global economics, and dive into probability, topology, macro theory, flying cars, robotics… and to document it along the way.</p>
-      <p>Apart from that, I also founded <a href="https://www.teamsosindia.in">Team SOS India Foundation</a>, a volunteer-driven legal aid and disaster-relief network. I served as its first President until 2025.</p>
+      <p>I'm Nitesh Singh, curator of xdaysofWeb3. Since 2010, I've documented Bitcoin—from running a full node during the Value Overflow incident to exploring tech, math, and economics. I also founded the <a href="https://www.teamsosindia.in">Team SOS India Foundation</a>.</p>
       <h3>Tech Projects</h3>
       <ul>
         <li>Team SOS India</li>
