Enrich About paragraph with personal interests (food, music, research, robots)

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <img src="./img/mypic.png" alt="mypic" class="mypic" />
       <h2>All the alphabets of my life</h2>
       <h3>About Me</h3>
-      <p>I'm Nitesh Singh, curator of xdaysofWeb3. Since 2010, I've documented Bitcoin—from running a full node during the Value Overflow incident to exploring tech, math, and economics. I also founded the <a href="https://www.teamsosindia.in">Team SOS India Foundation</a>.</p>
+      <p>I'm Nitesh Singh, curator of xdaysofWeb3. Since 2010, I've documented Bitcoin—from running a full node during the Value Overflow incident to exploring tech, math, and economics. I'm a foodie and home chef, eclectic music listener, and an introvert who loves staying in. I read papers on AI, robotics, math, and economics, and I code and build robots. I also founded the <a href="https://www.teamsosindia.in">Team SOS India Foundation</a>.</p>
       <h3>Tech Projects</h3>
       <ul>
         <li>Team SOS India</li>
