Update About section with new multi-paragraph bio

--- a/index.html
+++ b/index.html
@@ -19,7 +19,11 @@
       <img src="./img/mypic.png" alt="mypic" class="mypic" />
       <h2>All the alphabets of my life</h2>
       <h3>About Me</h3>
-      <p>I'm Nitesh Singh, curator of xdaysofWeb3. Since 2010, I've documented Bitcoin—from running a full node during the Value Overflow incident to exploring tech, math, and economics. I'm a foodie and home chef, eclectic music listener, and an introvert who loves staying in. I read papers on AI, robotics, math, and economics, and I code and build robots. I also founded the <a href="https://www.teamsosindia.in">Team SOS India Foundation</a>.</p>
+      <p>Hi, I’m Nitesh Singh.</p>
+      <p>I spend most of my time at the intersection of law, robotics, AI, mathematics, economics, and design thinking. I read research papers the way others binge-watch Netflix. I code, build robots, study fiscal systems, and cook meals. Music keeps me hooked — I enjoy every genre, every language, especially old melodies — and like most makers, I’m introverted by nature.</p>
+      <p>I founded Team SOS India Foundation, a volunteer-powered nonprofit that delivers legal aid, emergency assistance, and disaster relief across the country. From pandemic response to Ukraine war evacuations to day-to-day systemic breakdowns, we’ve been in the middle of it all.</p>
+      <p>In 2010, I set up a Bitcoin full node to investigate the infamous Value Overflow bug — one of Bitcoin's earliest security incidents. That moment didn’t just draw me into crypto; it pulled me into a decade-long exploration of money, systems, and power. I’ve been documenting this journey ever since through xdaysofWeb3, a digital diary turned public record.</p>
+      <p>Currently, I’m building a prescription-reading app for wider accessibility, two home robotics projects, and a few impact-driven Web3 applications.</p>
       <h3>Tech Projects</h3>
       <ul>
         <li>Team SOS India</li>
