Set main title to 'all the alphabets of my life'; remove subtitle and About section heading/greeting

--- a/index.html
+++ b/index.html
@@ -17,16 +17,14 @@
   <body>
     <div class="container">
       <img src="./img/mypic.png" alt="mypic" class="mypic" />
-      <h2 class="title">Nitesh Singh</h2>
-      <p class="subtitle">Curator of xdaysofWeb3 · Builder & researcher</p>
+      <h2 class="title">all the alphabets of my life</h2>
       <div class="actions">
         <a class="button" href="https://www.teamsosindia.foundation/" target="_blank" rel="noopener noreferrer">Team SOS India</a>
         <a class="button" href="https://www.xdaysofweb3.com/" target="_blank" rel="noopener noreferrer">xdaysofWeb3</a>
         <a class="button" href="https://www.xdaysofai.com/" target="_blank" rel="noopener noreferrer">xdaysofAI</a>
       </div>
 
-      <h3>About Me</h3>
-      <p>Hi, I’m Nitesh Singh.</p>
+      
       <p>I spend most of my time at the intersection of law, robotics, AI, mathematics, economics, and design thinking. I read research papers and publish notes on <a href="https://www.xdaysofai.com/">xdaysofAI</a>. I code, build robots, study fiscal systems, and cook meals. Music keeps me hooked — I enjoy every genre, every language, especially old melodies — and like most makers, I’m introverted by nature.</p>
       <p>I founded <a href="https://www.teamsosindia.foundation/">Team SOS India Foundation</a>, a volunteer-powered nonprofit that delivers legal aid, emergency assistance, and disaster relief across the country. From pandemic response to Ukraine war evacuations to day-to-day systemic breakdowns, we’ve been in the middle of it all.</p>
       <p>In 2010, I set up a Bitcoin full node to investigate the infamous Value Overflow bug — one of Bitcoin's earliest security incidents. That moment didn’t just draw me into crypto; it pulled me into a decade-long exploration of money, systems, and power. I’ve been documenting this journey ever since through <a href="https://www.xdaysofweb3.com/">xdaysofWeb3</a>, a digital diary turned public record.</p>
