--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <body>
     <div class="container">
       <img src="./img/mypic.png" alt="mypic" class="mypic" />
-      <h2 class="title">all the alphabets of my life</h2>
+      <h2 class="title">All the alphabets of my life</h2>
       <div class="actions">
         <a class="button" href="https://www.teamsosindia.foundation/" target="_blank" rel="noopener noreferrer">Team SOS India</a>
         <a class="button" href="https://www.xdaysofweb3.com/" target="_blank" rel="noopener noreferrer">xdaysofWeb3</a>
